Moved the current code to a subdirectory